# mandelbrot-zoom

./: .gitmodules  CMakeLists.txt  README.md  TODO.md  config.ini  deploy_web.fish  header.hpp  main.cpp  readme.md
configs/: mandelbrot.ini  mandelbrot_default.ini
include/: core.h
src/: core.cpp  header.hpp  main.cpp
